--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -98,6 +98,13 @@
 													-->
 												</ul>
 											</li>
+											
+											
+											<li>
+												<a href="../facpar/startup.agnux">Configuraci&oacute;n</a>
+											</li>
+											
+											
 											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
