--- a/erp-quimicos/src/main/webapp/css/modalbox/facpar/formaFacpar.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/facpar/formaFacpar.css
@@ -97,8 +97,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .facpar_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:700px;
-    height:380px;
+	width:830px;
+    height:370px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -109,7 +109,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .facpar_div_two{
 	/*font-family:tahoma;*/
-    width:700px;
+    width:830px;
     background-color:#454442;
 	margin-top:0;
     color:white;
@@ -123,7 +123,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .facpar_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:690px;
+    width:820px;
     /*height:140px;*/
     background-color:#e9e9e9;
     margin-top:5px;
@@ -151,3 +151,10 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	background:transparent;
 }
 
+.gral input{
+	height:15px;
+}
+
+.gral select{
+	height:17px;
+}
